    * Added a new "Group by application" view.
    * It's no longer necessary to manually keep ADB Debugging enabled.
    * If signed with the system certificate, use Android's official APIs
      rather than root access. This won't be relevant for most users, but
      is useful when compiling a custom Android.
    * Easier scrolling via a draggable thumb, as known from the Contacts
      app.
    * Russian translation (Andrew Ivanchenko).

1.6.2 (2010-11-26)
    * Fixed: Occasionally, apps could not be disabled, and an "you might
      not have root" messages was accidentally shown (thanks to Dan Feigt).

1.6.1 (2010-08-29)
    * No longer ask for INTERNET permission.
    * Re-release without Market copy protection.

1.6.0 (2010-05-22)
    * Retired our custom crash reporting in favor of Google's new
      built-in reporting facility (available starting with Froyo).
    * Support installation on SD card.
    * Added support for a number broadcasts new in Android 2.2.

1.5.7 (2010-05-11)
    * Fixed a stupid bug introduced in the last commit that broke
      orientation change and potentially caused crashes.

1.5.6 (2010-05-04)
    * Work around an Android bug that caused Autostarts to crash when
      processing certain packages that are advertised as being installed,
      but really are broken.

1.5.5 (2010-03-26)
    * Included higher resolution icons for HDPI screens, looks nicer now.
    * Automated exception-reporting functionality.
    * Very slightly improved progressbar behavior during orientation
      change.

1.5.3 (2010-02-23)
    * Show a warning before disabling Google Talk with respect to Market
      downloads.
    * Fixed display of component labels (a regression introduced in the
      1.5.0 backend refactor).
    * Improved way of using the root access; should work on more devices
      now, including the Archos devices and the Sholes Droid Mod.

1.5.0 (2010-02-10)
    * Major rewrite of how we retrieve package information. We no longer